feat: Implement new Landing Page, Policy X-Ray updates, and backend fixes

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,10 +1,7 @@
-# Backend Environment Variables
-
-# Google Gemini API Key for AI Features (Masumi Copilot, Meme Passport)
-GEMINI_API_KEY=AIzaSyBymkJ42t3LjwXQBpookl75j4Qe1Yn24m0 
-
-# Blockfrost API Key for Real Cardano Data (Optional, falls back to mock)
-BLOCKFROST_API_KEY=mainnetwNiI4XSRGoMXrcKDaIA1elFzsCXLz2W9
-
-# Yaci Store URL for Devnet Data (Optional, falls back to simulation)
-YACI_STORE_URL=http://localhost:8080/api/v1
+SQLITE_PATH=./data/nexguard.db
+BLOCKFROST_PROJECT_ID=
+BLOCKFROST_BASE=https://cardano-preview.blockfrost.io/api/v0
+MASUMI_KEY=
+AUDIT_CONTRACT_ADDRESS=
+PORT=8000
+CORS_ORIGINS=http://localhost:5173
