Fix: Force legacy-peer-deps via vercel.json installCommand

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "buildCommand": "npm run build --prefix packages/frontend",
     "outputDirectory": "packages/frontend/dist",
+    "installCommand": "npm install --legacy-peer-deps",
     "framework": "vite",
     "rewrites": [
         {
